test_programs/compile_failure/self_referential_struct/src/main.nr
struct SelfReferential
{
    prop : Option<SelfReferential>
}

#[test]
unconstrained
fn test_self_referential()
{
    let self_ref = SelfReferential { prop : Option::none() };
}
